# controllers/monsterController.js
@@ -3,42 +3,40 @@
 const axios = require("axios"); // npm i
 const Models = require("../models"); //matches index.js
 
-
-
 //Fetches all monsters
-const getAllMonsters = (res)=>{
-
+const getAllMonsters = (res) => {
   let config = {
-    method: 'get',
+    method: "get",
     maxBodyLength: Infinity,
-    url: 'https://mhw-db.com/monsters',
-    headers: { }
+    url: "https://mhw-db.com/monsters",
+    headers: {},
   };
-  axios.request(config)
-  .then((response) => {
-    console.log(response.data);
-    res.send(response.data)
-  })
-  .catch((error) => {
-    console.log(error);
-  });
-}
+  axios
+    .request(config)
+    .then((response) => {
+      console.log(response.data);
+      res.send(response.data);
+    })
+    .catch((error) => {
+      console.log(error);
+    });
+};
 
 // add favorite monster to database
-const addFavoriteMonster = async (body, res) => {
-  const { userId, monsterId } = body;
+const addFavoriteMonster = async (req, res) => {
+  const { id, userId } = req.body;
 
   let config = {
-    method: 'get',
+    method: "get",
     maxBodyLength: Infinity,
-    url: `https://mhw-db.com/monsters/${monsterId}`,
-    headers: {}
+    url: `https://mhw-db.com/monsters/${id}`,
+    headers: {},
   };
 
   // Step 1 - retrieve monsters from API
-  let monster = await axios.request(config)
+  let monster = await axios
+    .request(config)
     .then((response) => {
-      
       return response.data;
     })
     .catch((error) => {
@@ -46,53 +44,55 @@ const addFavoriteMonster = async (body, res) => {
     });
 
   // Step 2 - modify monster to include userId
-    monster.userId = userId
+  monster.userId = userId;
 
   // Step 3 - add monster to user's favorite Monster collection
-    Models.FavoriteMonster(monster)
+  Models.FavoriteMonster(monster)
     .save()
-    .then((data) => res.send({ result: 200, data: data, message: "Monster added to favorites"}))
+    .then((data) =>
+      res.send({
+        result: 200,
+        data: data,
+        message: "Monster added to favorites",
+      })
+    )
     .catch((err) => {
       console.log(err);
       res.send({ result: 500, error: err.message });
     });
 };
 
-
-
 // delete favorite monster from database
 const deleteFavoriteMonster = async (req, res) => {
   const { userId, monsterId } = req.body;
 
-  Models.FavoriteMonster.deleteOne({id: monsterId , userId: userId })
-  .then((response)=>{
-    res.status(200).send({
-      result: 200,
-      data: response,
-      message: "Favorite monster deleted successfully",
+  Models.FavoriteMonster.deleteOne({ id: monsterId, userId: userId })
+    .then((response) => {
+      res.status(200).send({
+        result: 200,
+        data: response,
+        message: "Favorite monster deleted successfully",
+      });
+    })
+    .catch((err) => {
+      res.send(err);
     });
-  })
-  .catch((err)=>{res.send(err)}) 
-  
 };
 
 //Find all user's favorites
-  const getFavoriteMonsterByUserId = async (userId, res) => {
-
-Models.FavoriteMonster.find({userId: userId})
-.then((response)=>{
-  res.status(200).send({
-    result: 200,
-    data: response,
-    message: "User's favorite monster(s) retrieved successfully",
+const getFavoriteMonsterByUserId = async (userId, res) => {
+  Models.FavoriteMonster.find({ userId: userId }).then((response) => {
+    res.status(200).send({
+      result: 200,
+      data: response,
+      message: "User's favorite monster(s) retrieved successfully",
+    });
   });
-})
-  }
-
+};
 
 module.exports = {
-    getAllMonsters,
-    addFavoriteMonster,
-    deleteFavoriteMonster,
-     getFavoriteMonsterByUserId,
-}
+  getAllMonsters,
+  addFavoriteMonster,
+  deleteFavoriteMonster,
+  getFavoriteMonsterByUserId,
+};
