# swagger.json
@@ -66,9 +66,7 @@
               "$ref": "#definitions/User"
             }
           },
-          {"name": "User id",
-          "in": "path",
-          "description": "User details"}
+          { "name": "_id", "in": "path", "description": "User details" }
         ],
         "responses": {
           "200": {
@@ -149,97 +147,95 @@
       }
     },
     "/monsters/by-user/{userId}": {
-        "get": {
-          "tags": ["Monsters"],
-          "summary": "Fetch user's favorite monsters",
-          "parameters": [
-            {
-              "name": "userId",
-              "in": "path",
-              "description": "User id"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "This service allows you to search a user's favorite monsters by user id"
-            }
+      "get": {
+        "tags": ["Monsters"],
+        "summary": "Fetch user's favorite monsters",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "User id"
           }
-        }
-      },
-      "/weapons": {
-        "get": {
-          "tags": ["Weapons"],
-          "summary": "Fetch all weapons from API",
-          "responses": {
-            "200": {
-              "description": "This service allows you to fetch all weapons from the API"
-            }
-          }
-        }
-      },
-      "/weapons/add": {
-        "post": {
-          "tags": ["Weapons"],
-          "summary": "Add favorite weapon to user profile",
-          "parameters": [
-            {
-              "name": "json",
-              "in": "body",
-              "description": "Weapon and user id",
-              "schema": {
-                "$ref": "#definitions/Weapon"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "This service allows you to add a favorite weapon to your user profile"
-            }
-          }
-        }
-      },
-      "/weapons/delete": {
-        "delete": {
-          "tags": ["Weapons"],
-          "summary": "Remove favorite weapon from user profile",
-          "parameters": [
-            {
-              "name": "json",
-              "in": "body",
-              "description": "Weapon and user id",
-              "schema": {
-                "$ref": "#definitions/Weapon"
-              }
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "This service allows you to remove a favorite weapon from your user profile"
-            }
-          }
-        }
-      },
-      "/weapons/by-user/{userId}": {
-        "get": {
-          "tags": ["Weapons"],
-          "summary": "Fetch user's favorite weapon",
-          "parameters": [
-            {
-              "name": "userId",
-              "in": "path",
-              "description": "User id"
-            }
-          ],
-          "responses": {
-            "200": {
-              "description": "This service allows you to search a user's favorite weapon by user id"
-            }
+        ],
+        "responses": {
+          "200": {
+            "description": "This service allows you to search a user's favorite monsters by user id"
           }
         }
       }
+    },
+    "/weapons": {
+      "get": {
+        "tags": ["Weapons"],
+        "summary": "Fetch all weapons from API",
+        "responses": {
+          "200": {
+            "description": "This service allows you to fetch all weapons from the API"
+          }
+        }
+      }
+    },
+    "/weapons/add": {
+      "post": {
+        "tags": ["Weapons"],
+        "summary": "Add favorite weapon to user profile",
+        "parameters": [
+          {
+            "name": "json",
+            "in": "body",
+            "description": "Weapon and user id",
+            "schema": {
+              "$ref": "#definitions/Weapon"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "This service allows you to add a favorite weapon to your user profile"
+          }
+        }
+      }
+    },
+    "/weapons/delete": {
+      "delete": {
+        "tags": ["Weapons"],
+        "summary": "Remove favorite weapon from user profile",
+        "parameters": [
+          {
+            "name": "json",
+            "in": "body",
+            "description": "Weapon and user id",
+            "schema": {
+              "$ref": "#definitions/Weapon"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "This service allows you to remove a favorite weapon from your user profile"
+          }
+        }
+      }
+    },
+    "/weapons/by-user/{userId}": {
+      "get": {
+        "tags": ["Weapons"],
+        "summary": "Fetch user's favorite weapon",
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "path",
+            "description": "User id"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "This service allows you to search a user's favorite weapon by user id"
+          }
+        }
+      }
+    }
   },
-  
-
 
   "definitions": {
     "User": {
@@ -257,20 +253,20 @@
     },
     "Monster": {
       "properties": {
-        "userId": {
-          "type": "string"
+        "id": {
+          "type": "number"
         },
-        "monsterId": {
+        "userId": {
           "type": "number"
         }
       }
     },
     "Weapon": {
       "properties": {
-        "userId": {
-          "type": "string"
+        "id": {
+          "type": "number"
         },
-        "weaponId": {
+        "userId": {
           "type": "number"
         }
       }
